--- a/hello-word-2201681061/tsconfig.json
+++ b/hello-word-2201681061/tsconfig.json
@@ -7,6 +7,7 @@
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
+    "noImplicitAny": false,
     "noFallthroughCasesInSwitch": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -29,4 +30,8 @@
     "strictInputAccessModifiers": true,
     "strictTemplates": true
   }
+
+
+
+  
 }
